# pacsportal-dioxus

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Dioxus.toml
.codesandbox/: Dockerfile  tasks.json
src/: main.rs
