[package]
name = "pacsportal"
version = "0.1.0"
authors = ["Naveed Aman Pasha <naveedpash@gmail.com>"]
edition = "2021"

[dependencies]
dioxus-fullstack = { version = "0.4", features = ["router"] }
dioxus = { version = "0.4" }
serde = { version = "1.0.159", features = ["derive"] }
dioxus-router = { version = "0.4" }
# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

[features]
default = []
ssr = ["dioxus-fullstack/salvo"]
web = ["dioxus-router/web", "dioxus-fullstack/web"]